--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 				</div>
 
 				<footer class="site-footer">
-					<p>Copyright &copy; 2014 Company Name. Designed by Themezy. All rights reserved</p>
+					<p>Copyright &copy; 2021 Company Name. Designed by Brighton Malingi. All rights reserved</p>
 
 					<div class="social-links">
 						<a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
